#
# == 税務署員クラス
#
# Author:: k2works
# Version:: 1.0.0
# License:: Ruby License
#
class TaxMan
  def update( changed_employee )
    puts("#{changed_employee.name}に新しい税金の請求書を送ります！")
  end
end