@startuml

abstract class Observer {
update(subject)
}

Observer <|--l Subject
Subject <|-- Employee
Observer <|-- Payroll
Observer <|-- TaxMan

class Subject {
-observers[]
add_observer(o)
remove_observer(o)
notify_observers()
}

class Employee {
changes_complete()
}

class TaxMan {
update(subject)
}

class Payroll {
update(subject)
}

@enduml